# PracticeLangChain

./: main.py  pyproject.toml
SearchAgent/: main.py  schemas.py
